Hobdy-part-one/style.css
html {
    font-family: 'Fira Sans', sans-serif;
    background-color: #F0ECEE;
    background-image: url("images/bulldog.jpg") no-repeat 0 0;
    height: 100%;
}

div {
    display: flex;
    flex-flow: row nowrap;
}
body {
   min-height: 100%;
}

.header {
    padding: 12px;
    margin: 10px;
    font-weight: 400;
}

.emphasis {
    color: #FF4850;
}

.nav {
color: #88898B;
display: flex;
flex-flow: row nowrap;
justify-content: space-between;
float: right;
overflow: hidden;
}

.nav a {
    float: right;
    overflow: hidden;
}

.nav:hover {
    color: #FF4850;
}

#ul {
    overflow: hidden;
    padding: 0;
    margin: 0;
}

li {
    display: inline;
    float: left;
}

a {
    display: inline;
    text-decoration: none;
    color: #88898B;
    padding: 4px;
}

a:hover {
    color: #FF4850;
}

.button {
    color: white;
    background-color: #FF4850;
    padding: 10px;
    border-radius: 15px;
    cursor: pointer;
    border: none;
    position: relative;
}

.button li {
    justify: baseline;
}
.button:hover {
    background-color: #CCC;
}

#paragraph {
display: flex;
}

h1 {
    font-weight: 600;
}

h2 {
    color: #88898B;
    font-weight: 300;
}

@media screen and (min-width: 768px) {
    .nav {
        flex-direction: column;
    }
}

